Alterado o CSS do rodapé

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -129,3 +129,12 @@ footer {
 		float: right;
 
 	}
+
+	.icons {
+		display: inline-block;
+	}
+
+	.maps {
+		display: inline-block;
+		float: right;
+	}
